tests/machine/x/c/map_int_key.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/map_int_key.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/map_int_key.c:67:29: warning: passing argument 3 of ‘map_int_bool_put’ makes integer from pointer without a cast [-Wint-conversion]
   67 |   map_int_bool_put(&_t1, 1, "a");
      |                             ^~~
      |                             |
      |                             char *
/workspace/mochi/tests/machine/x/c/map_int_key.c:46:60: note: expected ‘int’ but argument is of type ‘char *’
   46 | static void map_int_bool_put(map_int_bool *m, int key, int value) {
      |                                                        ~~~~^~~~~
/workspace/mochi/tests/machine/x/c/map_int_key.c:68:29: warning: passing argument 3 of ‘map_int_bool_put’ makes integer from pointer without a cast [-Wint-conversion]
   68 |   map_int_bool_put(&_t1, 2, "b");
      |                             ^~~
      |                             |
      |                             char *
/workspace/mochi/tests/machine/x/c/map_int_key.c:46:60: note: expected ‘int’ but argument is of type ‘char *’
   46 | static void map_int_bool_put(map_int_bool *m, int key, int value) {
      |                                                        ~~~~^~~~~
/workspace/mochi/tests/machine/x/c/map_int_key.c:69:11: error: incompatible types when initializing type ‘int’ using type ‘map_int_bool’
   69 |   int m = _t1;
      |           ^~~
/workspace/mochi/tests/machine/x/c/map_int_key.c:70:19: error: request for member ‘data’ in something not a structure or union
   70 |   printf("%s\n", m.data[1]);
      |                   ^

   1: #include <stdio.h>
